Made minor changes to docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,13 @@ services:
     command: CompileDaemon -command="./marketplace -b 0.0.0.0"
 
   db:
+    env_file:
+      - .env
     image: postgres:alpine
     environment:
+      - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
     ports:
       - 5432:5432
     volumes:
