--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name localhost;
 
   location / {
-    proxy_pass http://backend:3000/;
+    proxy_pass http://backend:3000;
     proxy_set_header HOST $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
